--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 :root {
     --yellow: #F2C94C;
-    --black: #333;
+    --black: rgb(51, 51, 51);
+    --blue: rgb(33, 44, 197);
 }
 
 *{
@@ -31,16 +32,16 @@ textarea {
     padding: 1rem;
     font-family: 'Kalam', cursive;
     font-size: larger;
-    color: #333;
+    color: var(--black);
 }
 
 .heading {
     font-size: 2rem;
     padding: 1rem;
     text-align: center;
-    background-color: #F2C94C;
+    background-color: var(--yellow);
     width: 100%;
-    color: #333;
+    color: rgb(33, 44, 197);;
 }
 
 
@@ -52,24 +53,24 @@ textarea {
     padding: 1rem;
     font-family: 'Kalam', cursive;
     font-size: larger;
-    color: #333;
+    color: var(--black);
 
 }
 
 button {
-    background-color: #F2C94C;
+    background-color: var(--yellow);
     border: none;
     margin: 1rem 0rem;
     padding: 1rem 2rem;
     font-family: 'Kalam', cursive;
     font-size: larger;
     border-radius: 1rem;
-    color: #333;
+    color: var(--blue);
 
 }
 
 #btn-translate:hover {
-    background: #ffc042;
+    background: var(--yellow);
     text-decoration: none;
     cursor: pointer;
     
@@ -81,8 +82,8 @@ footer {
     width: 100%;
     padding: 1rem;
     bottom: 0;
-    background-color: #F2C94C;
-    color: #333;
+    background-color: var(--yellow);
+    color: var(--black);
 }
 
 footer p {
