--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
 
 :root {
-    --yellow: #F2C94C;
+    --yellow: #ffe347C;
     --black: rgb(51, 51, 51);
     --blue: rgb(33, 44, 197);
 }
